--- a/app/src/main/res/values/app_names.xml
+++ b/app/src/main/res/values/app_names.xml
@@ -21,4 +21,6 @@
     <string name="appNameAR" translatable="false">أوقات الصلاة</string>
     <string name="appNameFR" translatable="false">Horaires des prières</string>
     <string name="appNameRU" translatable="false">Расписание молитв</string>
+    <string name="appNameNL" translatable="false">Gebedstijden</string>
+    <string name="appNameKU" translatable="false">Demên Nimêjê</string>
 </resources>
