--- a/app/src/main/res/layout-land/vakit_fragment.xml
+++ b/app/src/main/res/layout-land/vakit_fragment.xml
@@ -38,14 +38,14 @@
         android:layout_height="match_parent"
         android:layout_below="@id/kerahat">
 
+
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/date"
-            android:layout_alignParentTop="true"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:lines="1"
             android:textStyle="italic"
-            app:layout_heightPercent="8%"
+            app:layout_heightPercent="11%"
             app:layout_marginTopPercent="1%"
             app:layout_widthPercent="100%" />
 
@@ -55,7 +55,7 @@
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:lines="1"
-            app:layout_heightPercent="11%"
+            app:layout_heightPercent="17%"
             app:layout_widthPercent="100%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
@@ -65,180 +65,144 @@
             android:gravity="center"
             android:lines="1"
             android:textStyle="italic"
-            app:layout_heightPercent="8%"
-            app:layout_marginBottomPercent="5%"
+            app:layout_heightPercent="11%"
+            app:layout_marginBottomPercent="2%"
             app:layout_widthPercent="100%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/fajr"
             android:layout_below="@id/hicri"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/fajr"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/fajrTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/hicri"
+            android:layout_below="@id/fajr"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/sun"
-            android:layout_below="@id/fajr"
+            android:layout_below="@id/hicri"
+            android:layout_toEndOf="@id/fajrTime"
+            android:layout_toRightOf="@id/fajrTime"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/sun"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/sunTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/fajr"
+            android:layout_below="@id/sun"
+            android:layout_toEndOf="@id/fajr"
+            android:layout_toRightOf="@id/fajr"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/zuhr"
-            android:layout_below="@id/sun"
+            android:layout_below="@id/hicri"
+            android:layout_toEndOf="@id/sun"
+            android:layout_toRightOf="@id/sun"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/zuhr"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/zuhrTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/sun"
+            android:layout_below="@id/zuhr"
+            android:layout_toEndOf="@id/sunTime"
+            android:layout_toRightOf="@id/sunTime"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/asr"
-            android:layout_below="@id/zuhr"
+            android:layout_below="@id/fajrTime"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/asr"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/asrTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/zuhr"
+            android:layout_below="@id/asr"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/maghrib"
-            android:layout_below="@id/asr"
+            android:layout_below="@id/fajrTime"
+            android:layout_toEndOf="@id/asr"
+            android:layout_toRightOf="@id/asr"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/maghrib"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/maghribTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/asr"
+            android:layout_below="@id/maghrib"
+            android:layout_toEndOf="@id/asrTime"
+            android:layout_toRightOf="@id/asrTime"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/ishaa"
-            android:layout_below="@id/maghrib"
+            android:layout_below="@id/fajrTime"
+            android:layout_toEndOf="@id/maghribTime"
+            android:layout_toRightOf="@id/maghribTime"
             android:fontFamily="sans-serif-light"
-            android:paddingEnd="0dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="0dp"
-            android:paddingStart="50dp"
+            android:gravity="center"
             android:text="@string/ishaa"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/ishaaTime"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/maghrib"
+            android:layout_below="@id/ishaa"
+            android:layout_toEndOf="@id/maghrib"
+            android:layout_toRightOf="@id/maghrib"
             android:fontFamily="sans-serif-thin"
-            android:gravity="end"
-            android:paddingEnd="50dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="50dp"
-            android:paddingStart="0dp"
+            android:gravity="center"
             android:text="00:00"
-            app:layout_heightPercent="9%"
-            app:layout_widthPercent="50%" />
+            app:layout_heightPercent="11%"
+            app:layout_widthPercent="33.3%" />
+
 
         <com.metinkale.prayerapp.utils.AutoResizeTextView
             android:id="@+id/countdown"
-            android:layout_below="@id/ishaa"
+            android:layout_width="wrap_content"
+            android:layout_below="@id/ishaaTime"
+            android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            app:layout_heightPercent="9%"
-            app:layout_marginTopPercent="5%"
-            app:layout_widthPercent="100%" />
+            app:layout_heightPercent="11%"
+            app:layout_marginTopPercent="2%" />
 
         <ImageView
             android:id="@+id/source2"
@@ -265,6 +229,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/appName"
             android:cropToPadding="true" />
+
 
     </android.support.percent.PercentRelativeLayout>
 </RelativeLayout>
