--- a/app/src/main/res/layout/names_main.xml
+++ b/app/src/main/res/layout/names_main.xml
@@ -15,16 +15,10 @@
   ~
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e3e3e3"
-    android:orientation="vertical">
-
-    <ListView
-        android:id="@android:id/list"
-        android:divider="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+    android:divider="#00000000" />
