--- a/app/src/main/res/layout/vakit_main.xml
+++ b/app/src/main/res/layout/vakit_main.xml
@@ -38,6 +38,7 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/holyday" />
 
