--- a/app/src/main/res/layout/vakit_settings.xml
+++ b/app/src/main/res/layout/vakit_settings.xml
@@ -114,7 +114,7 @@
 
 
             <RelativeLayout
-                android:id="@id/imsak"
+                android:id="@id/fajr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -166,7 +166,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@id/gunes"
+                android:id="@id/sun"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/center"
@@ -218,12 +218,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@id/ogle"
+                android:id="@id/zuhr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_alignRight="@id/imsak"
-                android:layout_below="@id/imsak">
+                android:layout_alignRight="@id/fajr"
+                android:layout_below="@id/fajr">
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:contentDescription="@null"
@@ -270,10 +270,10 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@id/ikindi"
+                android:id="@id/asr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/imsak"
+                android:layout_below="@id/fajr"
                 android:layout_toRightOf="@id/center">
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
@@ -321,11 +321,11 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@id/aksam"
+                android:id="@id/maghrib"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@id/ogle"
+                android:layout_below="@id/zuhr"
                 android:layout_toLeftOf="@id/center">
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
@@ -373,11 +373,11 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@id/yatsi"
+                android:id="@id/ishaa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/aksam"
-                android:layout_alignBottom="@id/aksam"
+                android:layout_alignBaseline="@id/maghrib"
+                android:layout_alignBottom="@id/maghrib"
                 android:layout_toRightOf="@id/center">
 
                 <net.steamcrafted.materialiconlib.MaterialIconView
