--- a/app/src/main/res/values/app_names.xml
+++ b/app/src/main/res/values/app_names.xml
@@ -23,4 +23,5 @@
     <string name="appNameRU" translatable="false">Расписание молитв</string>
     <string name="appNameNL" translatable="false">Gebedstijden</string>
     <string name="appNameKU" translatable="false">Demên Nimêjê</string>
+    <string name="appNameBS" translatable="false">Vaktija</string>
 </resources>
