--- a/app/src/main/res/layout/widget_4x1.xml
+++ b/app/src/main/res/layout/widget_4x1.xml
@@ -20,6 +20,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center">
 
+    <!--suppress AndroidElementNotAllowed -->
     <DateTimeView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
