--- a/app/src/main/res/layout/about_main.xml
+++ b/app/src/main/res/layout/about_main.xml
@@ -315,6 +315,93 @@
                     android:textColor="#555555"
                     android:textSize="12sp" />
             </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/share"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:padding="5dp">
+
+                <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:id="@id/icon"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="center"
+                    app:materialIcon="share"
+                    app:materialIconColor="#555555"
+                    app:materialIconSize="24dp" />
+
+                <TextView
+                    android:id="@id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/icon"
+                    android:layout_toRightOf="@+id/icon"
+                    android:text="@string/share"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@id/summary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/title"
+                    android:layout_toEndOf="@+id/icon"
+                    android:layout_toRightOf="@+id/icon"
+                    android:text="@string/share_sum"
+                    android:textColor="#555555"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/MyCard">
+
+            <RelativeLayout
+                android:id="@+id/showIntro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:padding="5dp">
+
+                <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:id="@id/icon"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="center"
+                    app:materialIcon="window_restore"
+                    app:materialIconColor="#555555"
+                    app:materialIconSize="24dp" />
+
+                <TextView
+                    android:id="@id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/icon"
+                    android:layout_toRightOf="@+id/icon"
+                    android:text="@string/showIntro"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@id/summary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/title"
+                    android:layout_toEndOf="@+id/icon"
+                    android:layout_toRightOf="@+id/icon"
+                    android:text="@string/showIntro_sum"
+                    android:textColor="#555555"
+                    android:textSize="12sp" />
+            </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout style="@style/MyCard">
