--- a/app/src/main/res/layout/intro_pager.xml
+++ b/app/src/main/res/layout/intro_pager.xml
@@ -15,16 +15,16 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
 
-    <RelativeLayout
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffffff"
         android:scaleX="0.65"
         android:scaleY="0.65">
 
@@ -35,47 +35,20 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             android:theme="@style/ToolbarTheme"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <FrameLayout
+            android:id="@+id/basecontent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/footerText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/toolbar" />
 
-        <TextView
-            android:id="@+id/footerText"
-            android:layout_width="match_parent"
-            android:layout_height="30dip"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorPrimary"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:text="@string/monthly"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addCity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="#ff0000"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:fabSize="normal"
-            app:pressedTranslationZ="12dp" />
     </RelativeLayout>
+
 
 </LinearLayout>
