--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -72,6 +72,7 @@
     </string-array>
 
     <string-array name="language">
+        <item>@string/systemLang</item>
         <item>Türkçe</item>
         <item>Deutsch</item>
         <item>English</item>
@@ -85,6 +86,7 @@
 
 
     <string-array name="language_val">
+        <item>system</item>
         <item>tr</item>
         <item>de</item>
         <item>en</item>
